welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:6: error: type mismatch;
 found   : Unit
 required: Boolean
	if (b>=13 && b<=19){
        ^